src/style/_base.scss
body {
  font-family: Arial, Helvetica, sans-serif;
  font-size: 16px;
}

.main {
  width: 100%;
  padding: 10px;
  box-sizing: border-box;
}

.command-bar {
  display: flex;
  align-items: center;
  justify-content: space-between;

  margin-bottom: 15px;
}

.command-bar__panel {
  display: flex;
  align-items: center;
}

.command-bar__btn {
  width: 50px;
  margin: 0 5px 0 0;
  padding: 8px 0 8px 0;

  border: none;
  border-radius: 3px;

  color: black;
  background: none;
  cursor: pointer;

  display: flex;
  justify-content: center;

  &:hover,
  &:focus {
    outline: none;
    background-color: lightgrey;
    color: white;
  }

  &:disabled {
    opacity: 0.3;
    color: #dddddd;
    cursor: default;

    &:hover,
    &:focus {
      outline: none;
      background: none;
    }
  }

  &:last-child {
    margin-right: 0;
  }
}

.command-bar__btn--active {
  & .command-bar__circle {
    background-color: orange;
  }

  & .command-bar__circle-inner {
    background-color: white;
  }
}

.command-bar__circle {
  display: flex;
  align-items: center;
  justify-content: center;

  width: 16px;
  height: 16px;

  border-radius: 50%;
  background-color: black;
}

.command-bar__circle-inner {
  width: 4px;
  height: 4px;
  border-radius: 50%;
  background-color: black;
}

.command-bar__btn__icon {
  height: 18px;
  display: block;
}

.editor {
  margin-bottom: 10px;
  position: relative;
}

.status-bar {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1;
  padding: 5px 10px 5px 10px;
  font-size: 14px;
  color: grey;
}

.editor__counter {
  cursor: help;
  padding-right: 7px;
  margin-right: 7px;
  border-right: 1px solid #dddddd;

  &:last-child {
    padding-right: 0;
    margin-right: 0;
    border-right: none;
  }
}

.editor__message {
  color: #5f9ea0;
}

.editor__textarea {
  width: 100%;
  min-height: 250px;
  padding: 35px 10px 10px 10px;
  box-sizing: border-box;
  border: 1px solid lightgrey;
  display: block;
  border-radius: 4px;
  color: #111111;

  &:focus {
    outline: none;
  }
}

.underside {
  margin-bottom: 30px;
}

.preview {
  color: #111111;
  padding: 10px;
  box-sizing: border-box;
}

.hidden {
  display: none;
}

